objects/Account.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Edit__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e&quot;,IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000000JDZu&quot;, &quot;Edit&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name2__c</fullName>
        <description>Mapped to Name2 field in SAP</description>
        <label>origDepartment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name3__c</fullName>
        <description>Mapped from Name3 field in SAP</description>
        <label>Contract Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name4__c</fullName>
        <description>Mapped from Name4 field in SAP</description>
        <label>Development Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BU_INF__c</fullName>
        <description>Field to capture BU information on accounts</description>
        <label>Legacy BU</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INF</fullName>
                </value>
                <value>
                    <fullName>LST</fullName>
                </value>
                <value>
                    <fullName>ENV</fullName>
                </value>
                <value>
                    <fullName>Dx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MDM_ID__c</fullName>
        <description>external ID  from EBX mapping, separate from SAP Ids
Can be useful in finding &quot;1&quot; record and seeing if it has SAP Id</description>
        <externalId>true</externalId>
        <label>MDM ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSW_PC__c</fullName>
        <formula>VALUE(ShippingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NSW PC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Managed Account</fullName>
                </value>
                <value>
                    <fullName>Top 10</fullName>
                </value>
                <value>
                    <fullName>Next 20</fullName>
                </value>
                <value>
                    <fullName>General Account</fullName>
                </value>
                <value>
                    <fullName>Partner Account</fullName>
                </value>
                <value>
                    <fullName>Not a Prospect</fullName>
                </value>
                <value>
                    <fullName>Dead Account</fullName>
                </value>
                <value>
                    <fullName>Must Win</fullName>
                </value>
                <value>
                    <fullName>Parent Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SGL_ID__c</fullName>
        <label>SGL ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSW_PCB__c</fullName>
        <formula>vALUE(BillingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NSW PCB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A+ - Global Key Account</fullName>
                </value>
                <value>
                    <fullName>A - High Potential</fullName>
                </value>
                <value>
                    <fullName>B - Good Potential</fullName>
                </value>
                <value>
                    <fullName>C - Modest Potential</fullName>
                </value>
                <value>
                    <fullName>D -Low Potential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp_ID__c</fullName>
        <label>Temp ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Lab__c</fullName>
        <label>Core Lab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>6/30/2017 - Approved for Deletion</description>
        <label>Industry - DNA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Pharma</fullName>
                </value>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Educator</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <description>11/10/15 - To be deleted</description>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2nd Server Instance</fullName>
                </value>
                <value>
                    <fullName>ADB</fullName>
                </value>
                <value>
                    <fullName>ASM</fullName>
                </value>
                <value>
                    <fullName>AVM</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BSM</fullName>
                </value>
                <value>
                    <fullName>CIM</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>DRM</fullName>
                </value>
                <value>
                    <fullName>Dx Applied Genomics</fullName>
                </value>
                <value>
                    <fullName>Dx Blood Bank/Hao Yuan</fullName>
                </value>
                <value>
                    <fullName>Dx EUROIMMUN</fullName>
                </value>
                <value>
                    <fullName>Dx Independent Clinical Laboratory</fullName>
                </value>
                <value>
                    <fullName>Dx POCT</fullName>
                </value>
                <value>
                    <fullName>Dx Reproductive Health</fullName>
                </value>
                <value>
                    <fullName>Dx Symbio</fullName>
                </value>
                <value>
                    <fullName>Dx Vanadis</fullName>
                </value>
                <value>
                    <fullName>Finch</fullName>
                </value>
                <value>
                    <fullName>FinchDocs</fullName>
                </value>
                <value>
                    <fullName>FinchTV</fullName>
                </value>
                <value>
                    <fullName>FinchTV as a Client</fullName>
                </value>
                <value>
                    <fullName>FOM</fullName>
                </value>
                <value>
                    <fullName>GAIT-GM</fullName>
                </value>
                <value>
                    <fullName>GAIT-SS</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>Grid</fullName>
                </value>
                <value>
                    <fullName>iFinch</fullName>
                </value>
                <value>
                    <fullName>LDAP</fullName>
                </value>
                <value>
                    <fullName>LM</fullName>
                </value>
                <value>
                    <fullName>OM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>globalid__c</fullName>
        <description>for EBX Authoring Tool</description>
        <label>globalid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CR_Target__c</fullName>
        <label>CR Target#</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_type__c</fullName>
        <label>Plan type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Managed Medicaid HMO</fullName>
                </value>
                <value>
                    <fullName>Regional Payer</fullName>
                </value>
                <value>
                    <fullName>State Medicaid</fullName>
                </value>
                <value>
                    <fullName>PPO Network</fullName>
                </value>
                <value>
                    <fullName>Employer Group Health Plan</fullName>
                </value>
                <value>
                    <fullName>Medical Group/IPA</fullName>
                </value>
                <value>
                    <fullName>Government Payer</fullName>
                </value>
                <value>
                    <fullName>Third Party Administrator</fullName>
                </value>
                <value>
                    <fullName>Blue Cross/Blue Shield</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>Identifies SAP Sales Org</description>
        <label>Sales Org</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_NTD__c</fullName>
        <description>used for NTD / SDx</description>
        <label>Active - NTD</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analytes_1__c</fullName>
        <description>11/10/15 - To Be Deleted</description>
        <label>Analytes 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TSH</fullName>
                </value>
                <value>
                    <fullName>PKU</fullName>
                </value>
                <value>
                    <fullName>GALT</fullName>
                </value>
                <value>
                    <fullName>17a-OHP</fullName>
                </value>
                <value>
                    <fullName>IRT</fullName>
                </value>
                <value>
                    <fullName>IEF gels</fullName>
                </value>
                <value>
                    <fullName>Hb kit</fullName>
                </value>
                <value>
                    <fullName>MSMS</fullName>
                </value>
                <value>
                    <fullName>Biotinidase</fullName>
                </value>
                <value>
                    <fullName>G6PD</fullName>
                </value>
                <value>
                    <fullName>T4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Analytes_2__c</fullName>
        <description>11/10/15 - To Be Deleted</description>
        <label>Analytes 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TSH</fullName>
                </value>
                <value>
                    <fullName>PKU</fullName>
                </value>
                <value>
                    <fullName>GALT</fullName>
                </value>
                <value>
                    <fullName>17a-OHP</fullName>
                </value>
                <value>
                    <fullName>IRT</fullName>
                </value>
                <value>
                    <fullName>IEF gels</fullName>
                </value>
                <value>
                    <fullName>Hb kit</fullName>
                </value>
                <value>
                    <fullName>MSMS</fullName>
                </value>
                <value>
                    <fullName>Biotinidase</fullName>
                </value>
                <value>
                    <fullName>G6PD</fullName>
                </value>
                <value>
                    <fullName>T4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Analytes_3__c</fullName>
        <description>11/10/15 - To Be Deleted</description>
        <label>Analytes 3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TSH</fullName>
                </value>
                <value>
                    <fullName>PKU</fullName>
                </value>
                <value>
                    <fullName>GALT</fullName>
                </value>
                <value>
                    <fullName>17a-OHP</fullName>
                </value>
                <value>
                    <fullName>IRT</fullName>
                </value>
                <value>
                    <fullName>IEF gels</fullName>
                </value>
                <value>
                    <fullName>Hb kit</fullName>
                </value>
                <value>
                    <fullName>MSMS</fullName>
                </value>
                <value>
                    <fullName>Biotinidase</fullName>
                </value>
                <value>
                    <fullName>G6PD</fullName>
                </value>
                <value>
                    <fullName>T4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeoCodeAxx__c</fullName>
        <formula>IF(ShippingCountry &lt;&gt; &quot;US&quot;,&quot;NA&quot;,
IF(CONTAINS(&quot;120, 121, 122, 123, 128, 129&quot;, left(ShippingPostalCode,3)), &quot;A01&quot;,
IF(CONTAINS(&quot;105, 106, 107, 108, 109, 124, 125, 126, 127, 137, 138, 139&quot;, left(ShippingPostalCode,3)), &quot;A02&quot;,
IF(CONTAINS(&quot;060, 061, 062, 063, 064, 065, 066, 067, 068, 069&quot;, left(ShippingPostalCode,3)), &quot;A03&quot;,
IF(CONTAINS(&quot;130, 131, 132, 133, 134, 135, 136, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149&quot;, left(ShippingPostalCode,3)), &quot;A04&quot;,
IF(CONTAINS(&quot;017, 018, 019, 020, 021, 022&quot;, left(ShippingPostalCode,3)), &quot;A05&quot;,
IF(CONTAINS(&quot;010, 011, 012, 013, 014, 015, 016, 023, 024, 025, 026, 027, 028, 029&quot;, left(ShippingPostalCode,3)), &quot;A06&quot;,
&quot;NA&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GeoCodeAxx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoCodeBxx__c</fullName>
        <formula>IF(ShippingCountry &lt;&gt; &quot;US&quot;,&quot;NA&quot;,
IF(CONTAINS(&quot;730, 731, 735, 736, 737, 738, 739, 746, 760, 761, 762, 763, 764, 765, 768, 769, 787, 790, 791, 792, 793, 794, 795, 796, 797, 798&quot;, left(ShippingPostalCode,3)), &quot;B01&quot;,
IF(CONTAINS(&quot;734, 740, 741, 743, 744, 745, 747, 748, 749, 750, 751, 752, 753, 754, 755, 756, 757, 758, 766, 767&quot;, left(ShippingPostalCode,3)), &quot;B02&quot;,
IF(CONTAINS(&quot;700, 701, 703, 704, 707, 708&quot;, left(ShippingPostalCode,3)), &quot;B06&quot;,
IF(CONTAINS(&quot;705, 706, 713, 714&quot;, left(ShippingPostalCode,3)), &quot;B07&quot;,
IF(CONTAINS(&quot;759, 773, 776, 777, 778&quot;, left(ShippingPostalCode,3)), &quot;B08&quot;,
IF(CONTAINS(&quot;770, 772, 774, 775, 779, 783, 784, 789&quot;, left(ShippingPostalCode,3)), &quot;B09&quot;,
IF(CONTAINS(&quot;780, 781, 782, 785, 786, 788&quot;, left(ShippingPostalCode,3)), &quot;B11&quot;,
IF(CONTAINS(&quot;716, 717, 718, 719, 720, 721, 722, 723, 724, 725, 726, 727, 728, 729&quot;, left(ShippingPostalCode,3)), &quot;B12&quot;,
IF(CONTAINS(&quot;710, 711, 712&quot;, left(ShippingPostalCode,3)), &quot;B13&quot;,
&quot;NA&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GeoCodeBxx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoCodeDxx__c</fullName>
        <formula>IF(ShippingCountry &lt;&gt; &quot;US&quot;,&quot;NA&quot;,
IF(CONTAINS(&quot;401, 402, 421, 422, 423, 424, 427&quot;, left(ShippingPostalCode,3)), &quot;D01&quot;,
IF(CONTAINS(&quot;400, 403, 404, 405, 406, 407, 408, 409, 410, 411, 412, 413, 414, 415, 416, 417, 418, 425, 426&quot;, left(ShippingPostalCode,3)), &quot;D02&quot;,
IF(CONTAINS(&quot;460, 461, 462, 465, 466, 467, 468, 469, 470, 471, 472, 473, 474, 475, 476, 477, 478, 479&quot;, left(ShippingPostalCode,3)), &quot;D03&quot;,
IF(CONTAINS(&quot;430, 431, 432, 433, 451, 453, 454, 455, 456&quot;, left(ShippingPostalCode,3)), &quot;D04&quot;,
IF(CONTAINS(&quot;450, 452, 459&quot;, left(ShippingPostalCode,3)), &quot;D05&quot;,
IF(CONTAINS(&quot;630, 631, 633, 634, 635, 636, 637, 638, 639, 650, 651, 652, 654, 655&quot;, left(ShippingPostalCode,3)), &quot;D06&quot;,
IF(CONTAINS(&quot;420, 618, 619, 620, 622, 623, 624, 625, 626, 627, 628, 629&quot;, left(ShippingPostalCode,3)), &quot;D07&quot;,
IF(CONTAINS(&quot;640, 641, 642, 644, 645, 646, 647, 648, 649, 653, 656, 657, 658, 660, 661, 662, 664, 665, 666, 667, 668, 669, 670, 671, 672, 673, 674, 675, 676, 677, 678, 679&quot;, left(ShippingPostalCode,3)), &quot;D08&quot;,
IF(CONTAINS(&quot;680, 681, 683, 684, 685, 686, 687, 688, 689, 690, 691, 692, 693&quot;, left(ShippingPostalCode,3)), &quot;D09&quot;,
&quot;NA&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GeoCodeDxx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoCodeExx__c</fullName>
        <formula>IF(ShippingCountry &lt;&gt; &quot;US&quot;,&quot;NA&quot;,
IF(CONTAINS(&quot;600, 601, 610, 611&quot;, left(ShippingPostalCode,3)), &quot;E02&quot;,
IF(CONTAINS(&quot;463, 464, 602, 603, 604, 605, 606, 607, 608, 609, 612, 613, 614, 615, 616, 617&quot;, left(ShippingPostalCode,3)), &quot;E03&quot;,
IF(CONTAINS(&quot;530, 531, 532, 534, 535, 537, 538, 539, 541, 542, 543, 544, 545, 549&quot;, left(ShippingPostalCode,3)), &quot;E04&quot;,
IF(CONTAINS(&quot;500, 501, 502, 503, 504, 505, 506, 507, 508, 509, 510, 511, 512, 513, 514, 515, 516, 520, 521, 522, 523, 524, 525, 526, 527, 528&quot;, left(ShippingPostalCode,3)), &quot;E05&quot;,
IF(CONTAINS(&quot;540, 546, 547, 548, 550, 551, 553, 554, 555, 556, 557, 558, 559, 560, 561, 562, 563, 564, 565, 566, 567, 570, 571, 572, 573, 574, 575, 576, 577, 580, 581, 582, 583, 584, 585, 586, 587, 588&quot;, left(ShippingPostalCode,3)), &quot;E06&quot;,
&quot;NA&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GeoCodeExx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoCodeGxx__c</fullName>
        <formula>IF(ShippingCountry &lt;&gt; &quot;US&quot;,&quot;NA&quot;,
IF(CONTAINS(&quot;832, 833, 834, 835, 836, 837&quot;, left(ShippingPostalCode,3)), &quot;G01&quot;,
IF(CONTAINS(&quot;840, 841, 842, 843, 844, 845, 846, 847&quot;, left(ShippingPostalCode,3)), &quot;G02&quot;,
IF(CONTAINS(&quot;799, 870, 871, 872, 873, 874, 875, 877, 878, 879, 880, 881, 882, 883, 884, 885&quot;, left(ShippingPostalCode,3)), &quot;G03&quot;,
IF(CONTAINS(&quot;800, 801, 802, 803, 804, 805, 806, 807, 808, 809, 810, 811, 812, 813, 814, 815, 816&quot;, left(ShippingPostalCode,3)), &quot;G04&quot;,
IF(CONTAINS(&quot;590, 591, 592, 593, 594, 595, 596, 597, 598, 599&quot;, left(ShippingPostalCode,3)), &quot;G05&quot;,
IF(CONTAINS(&quot;850, 852, 853, 855, 856, 857, 859, 860, 863, 864, 865&quot;, left(ShippingPostalCode,3)), &quot;G06&quot;,
IF(CONTAINS(&quot;820, 821, 822, 823, 824, 825, 826, 827, 828, 829, 830, 831&quot;, left(ShippingPostalCode,3)), &quot;G07&quot;,
IF(CONTAINS(&quot;838, 982, 983, 984, 985, 987, 988, 990, 991, 992, 994&quot;, left(ShippingPostalCode,3)), &quot;G08&quot;,
IF(CONTAINS(&quot;970, 971, 972, 973, 974, 975, 976, 977, 978, 979, 980, 981, 986, 989, 993&quot;, left(ShippingPostalCode,3)), &quot;G09&quot;,
IF(CONTAINS(&quot;995, 996, 997, 998, 999&quot;, left(ShippingPostalCode,3)), &quot;G10&quot;,
IF(CONTAINS(&quot;889, 890, 891&quot;, left(ShippingPostalCode,3)), &quot;G11&quot;,
&quot;NA&quot;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GeoCodeGxx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoCodeLxx__c</fullName>
        <formula>IF(ShippingCountry &lt;&gt; &quot;US&quot;,&quot;NA&quot;,
IF(CONTAINS(&quot;260, 261, 262, 263, 264, 265, 437, 438, 439, 457&quot;, left(ShippingPostalCode,3)), &quot;L01&quot;,
IF(CONTAINS(&quot;150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167&quot;, left(ShippingPostalCode,3)), &quot;L02&quot;,
IF(CONTAINS(&quot;247, 248, 249, 250, 251, 252, 253, 255, 256, 257, 258, 259, 266&quot;, left(ShippingPostalCode,3)), &quot;L03&quot;,
IF(CONTAINS(&quot;440, 441, 442, 443, 444, 445, 446, 447, 448, 449&quot;, left(ShippingPostalCode,3)), &quot;L04&quot;,
IF(CONTAINS(&quot;434, 435, 436, 458, 480, 481, 482, 483, 484, 485, 487, 492&quot;, left(ShippingPostalCode,3)), &quot;L05&quot;,
IF(CONTAINS(&quot;486, 488, 489, 490, 491, 493, 494, 495, 496, 497, 498, 499&quot;, left(ShippingPostalCode,3)), &quot;L06&quot;,
&quot;NA&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GeoCodeLxx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoCodeMxx__c</fullName>
        <formula>IF(ShippingCountry &lt;&gt; &quot;US&quot;,&quot;NA&quot;,
IF(CONTAINS(&quot;030, 031, 032, 033, 034, 035, 036, 037, 038, 039, 040, 041, 042, 043, 044, 045, 046, 047, 048, 049, 050, 051, 052, 053, 054, 056, 057, 058, 059&quot;, left(ShippingPostalCode,3)), &quot;M03&quot;,
&quot;NA&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GeoCodeMxx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoCodeRxx__c</fullName>
        <formula>IF(ShippingCountry &lt;&gt; &quot;US&quot;,&quot;NA&quot;, 
IF(CONTAINS(&quot;350, 351, 352, 354, 355, 356, 357, 358, 359, 360, 361, 362, 363, 364, 367, 368, 369&quot;, left(ShippingPostalCode,3)), &quot;R01&quot;, 
IF(CONTAINS(&quot;304, 308, 309, 310, 312, 313, 314, 315, 316, 317, 318, 319,398&quot;, left(ShippingPostalCode,3)), &quot;R02&quot;, 
IF(CONTAINS(&quot;376, 377, 378, 379, 385&quot;, left(ShippingPostalCode,3)), &quot;R03&quot;, 
IF(CONTAINS(&quot;305, 307&quot;, left(ShippingPostalCode,3)), &quot;R04&quot;, 
IF(CONTAINS(&quot;373, 374&quot;, left(ShippingPostalCode,3)), &quot;R05&quot;, 
IF(CONTAINS(&quot;300, 301, 302, 303, 306, 311, 399&quot;, left(ShippingPostalCode,3)), &quot;R06&quot;, 
IF(CONTAINS(&quot;320, 321, 322, 323, 324, 326, 327, 328, 337, 344, 346, 347&quot;, left(ShippingPostalCode,3)), &quot;R07&quot;, 
IF(CONTAINS(&quot;329, 330, 331, 332, 333, 334, 335, 336, 338, 339, 340, 341, 342, 349&quot;, left(ShippingPostalCode,3)), &quot;R08&quot;, 
IF(CONTAINS(&quot;370, 371, 372, 375, 380, 381, 382, 383, 384, 386, 387, 388, 389, 397&quot;, left(ShippingPostalCode,3)), &quot;R09&quot;, 
IF(CONTAINS(&quot;325, 365, 366, 390, 391, 392, 393, 394, 395, 396&quot;, left(ShippingPostalCode,3)), &quot;R10&quot;, 
IF(CONTAINS(&quot;270, 271, 272, 273, 274, 275, 276, 277, 278, 279, 280, 281, 282, 283, 284, 285&quot;, left(ShippingPostalCode,3)), &quot;R11&quot;, 
IF(CONTAINS(&quot;290, 291, 292, 293, 295, 297&quot;, left(ShippingPostalCode,3)), &quot;R12&quot;, 
IF(CONTAINS(&quot;286, 287, 288, 289&quot;, left(ShippingPostalCode,3)), &quot;R13&quot;, 
IF(CONTAINS(&quot;294, 298, 299&quot;, left(ShippingPostalCode,3)), &quot;R14&quot;, 
IF(CONTAINS(&quot;296&quot;, left(ShippingPostalCode,3)), &quot;R15&quot;, 
&quot;NA&quot;))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GeoCodeRxx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoCodeSxx__c</fullName>
        <formula>IF(ShippingCountry &lt;&gt; &quot;US&quot;,&quot;NA&quot;, 
IF(CONTAINS(&quot;080, 081, 082, 083, 084&quot;, left(ShippingPostalCode,3)), &quot;S01&quot;, 
IF(CONTAINS(&quot;170, 171, 172, 173, 174, 175, 176, 179&quot;, left(ShippingPostalCode,3)), &quot;S02&quot;, 
IF(CONTAINS(&quot;189, 193, 195, 196&quot;, left(ShippingPostalCode,3)), &quot;S03&quot;, 
IF(CONTAINS(&quot;190, 191, 192, 194&quot;, left(ShippingPostalCode,3)), &quot;S04&quot;, 
IF(CONTAINS(&quot;197, 198, 199&quot;, left(ShippingPostalCode,3)), &quot;S05&quot;, 
IF(CONTAINS(&quot;168, 169, 177, 178, 180, 181, 182, 183, 184, 185, 186, 187, 188&quot;, left(ShippingPostalCode,3)), &quot;S06&quot;, 
IF(CONTAINS(&quot;200, 202, 203, 204, 205, 208, 209&quot;, left(ShippingPostalCode,3)), &quot;S07&quot;, 
IF(CONTAINS(&quot;201, 206, 207, 220, 221, 222, 223, 224, 225, 226, 227, 228&quot;, left(ShippingPostalCode,3)), &quot;S08&quot;, 
IF(CONTAINS(&quot;229, 230, 231, 232, 233, 234, 235, 236, 237, 238, 239, 240, 241, 242, 243, 244, 245, 246&quot;, left(ShippingPostalCode,3)), &quot;S09&quot;, 
IF(CONTAINS(&quot;212, 214, 215, 217, 254, 267, 268&quot;, left(ShippingPostalCode,3)), &quot;S10&quot;, 
IF(CONTAINS(&quot;210, 211, 216, 218, 219&quot;, left(ShippingPostalCode,3)), &quot;S11&quot;, 
&quot;NA&quot;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GeoCodeSxx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoCodeUxx__c</fullName>
        <formula>IF(ShippingCountry &lt;&gt; &quot;US&quot;,&quot;NA&quot;, 
IF(CONTAINS(&quot;967, 968&quot;, left(ShippingPostalCode,3)), &quot;U01&quot;, 
IF(CONTAINS(&quot;940, 941, 943, 944, 949, 963, 964, 965, 966&quot;, left(ShippingPostalCode,3)), &quot;U02&quot;, 
IF(CONTAINS(&quot;939, 950&quot;, left(ShippingPostalCode,3)), &quot;U03&quot;, 
IF(CONTAINS(&quot;893, 894, 895, 897, 898, 936, 937, 938, 942, 952, 953, 956, 957, 958, 959, 960, 961, 962&quot;, left(ShippingPostalCode,3)), &quot;U04&quot;, 
IF(CONTAINS(&quot;945, 946, 947, 948, 951&quot;, left(ShippingPostalCode,3)), &quot;U06&quot;, 
IF(CONTAINS(&quot;954, 955&quot;, left(ShippingPostalCode,3)), &quot;U07&quot;, 
IF(CONTAINS(&quot;900, 902, 903, 904, 905, 906, 907, 908, 910, 911, 912, 913, 914, 915, 916, 918, 930, 931, 932, 933, 934, 935&quot;, left(ShippingPostalCode,3)), &quot;U09&quot;, 
IF(CONTAINS(&quot;917, 919, 920, 921, 922, 923, 924, 925, 926, 927, 928&quot;, left(ShippingPostalCode,3)), &quot;U10&quot;, 
&quot;NA&quot;)))))))))</formula>
        <label>GeoCodeUxx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoCodeXxx__c</fullName>
        <formula>IF(ShippingCountry &lt;&gt; &quot;US&quot;,&quot;NA&quot;, 
IF(CONTAINS(&quot;070, 071, 072, 073, 074, 075, 076, 078, 079, 103&quot;, left(ShippingPostalCode,3)), &quot;X02&quot;, 
IF(CONTAINS(&quot;088, 089&quot;, left(ShippingPostalCode,3)), &quot;X03&quot;, 
IF(CONTAINS(&quot;077, 085, 086, 087&quot;, left(ShippingPostalCode,3)), &quot;X04&quot;, 
IF(CONTAINS(&quot;091, 092, 093, 094, 095, 096, 097, 098, 100, 101, 102, 104, 111, 112, 113, 114, 116&quot;, left(ShippingPostalCode,3)), &quot;X06&quot;, 
IF(CONTAINS(&quot;110, 115, 117, 118, 119&quot;, left(ShippingPostalCode,3)), &quot;X07&quot;, 
&quot;NA&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GeoCodeXxx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Merge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreGeoCode__c</fullName>
        <formula>if(or(left(ShippingPostalCode,3)=&quot;&quot;,len(left(ShippingPostalCode,3))&lt;&gt;3) ,&quot;NA&quot;,left(ShippingPostalCode,3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PreGeoCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_number__c</fullName>
        <label>VAT number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allbound_ID__c</fullName>
        <label>Allbound ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mail_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merged_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DemandTools has merged a Prospect or PKI-Master into this Customer record</description>
        <inlineHelpText>DemandTools has merged a Prospect or PKI-Master into this Customer record</inlineHelpText>
        <label>Merged Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Fax__c</fullName>
        <description>SAP - KNA1/TELFX. Fax Number</description>
        <label>PKI SAP Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Tax__c</fullName>
        <label>Tax</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sample_Type__c</fullName>
        <label>Sample Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blood</fullName>
                </value>
                <value>
                    <fullName>Saliva</fullName>
                </value>
                <value>
                    <fullName>Saliva in OraGene</fullName>
                </value>
                <value>
                    <fullName>Buffy Coat</fullName>
                </value>
                <value>
                    <fullName>Amniotic Fluid</fullName>
                </value>
                <value>
                    <fullName>CVS Cells and Cell Pellets</fullName>
                </value>
                <value>
                    <fullName>FFPE Tissue</fullName>
                </value>
                <value>
                    <fullName>Buccal Swab</fullName>
                </value>
                <value>
                    <fullName>Serum/Plasma</fullName>
                </value>
                <value>
                    <fullName>Feces</fullName>
                </value>
                <value>
                    <fullName>Urine	Not Checked</fullName>
                </value>
                <value>
                    <fullName>Bacterial Culture</fullName>
                </value>
                <value>
                    <fullName>Food count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Fee__c</fullName>
        <label>Support Fee</label>
        <length>32</length>
        <type>Text</type>
    </fields>
</CustomObject>